--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,10 @@
 body {
   margin: 0;
 
+  color: var(--gray-700);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: var(--font-md);
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
