--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,10 @@
+@import url('node_modules/modern-normalize/modern-normalize.css');
+
 body {
   margin: 0;
 
   color: var(--gray-700);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
