--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
 
   color: var(--gray-700);
+  font-family: 'Inter Variable', sans-serif;
   font-size: 16px;
 
   background-color: var(--gray-25);
