--- a/src/features/Main/Main.module.css
+++ b/src/features/Main/Main.module.css
@@ -1,51 +1,3 @@
-.root {
-  padding: 0;
-}
-
-.welcomeWidget {
-  width: 60%;
+.grid {
   height: 400px;
-}
-
-.background {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 1;
-
-  width: calc(100% - var(--space-12));
-  height: calc(100% - var(--space-12));
-
-  background-repeat: no-repeat;
-
-  background-size: cover;
-  border-radius: var(--radius-3xl);
-
-  transform: translate(-50%, -50%);
-}
-
-.content {
-  position: relative;
-  z-index: 2;
-
-  padding-top: var(--space-24);
-  padding-left: var(--space-16);
-}
-
-.title {
-  margin: 0;
-
-  font-size: var(--title-md);
-  font-weight: 600;
-}
-
-.message {
-  margin: 0;
-  margin-top: var(--space-24);
-
-  font-size: var(--text-xl);
-
-  span {
-    font-weight: 500;
-  }
 }
