--- a/src/features/Main/components/CalendarWidget/CalendarWidget.module.css
+++ b/src/features/Main/components/CalendarWidget/CalendarWidget.module.css
@@ -1,3 +1,86 @@
 .root {
-  padding: 0;
+  padding: var(--space-24) var(--space-24);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: var(--space-24);
+
+  button {
+    padding: 0;
+
+    background: none;
+    border: 0;
+  }
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.month {
+  margin-bottom: var(--space-8);
+}
+
+.year {
+  color: var(--gray-400);
+  font-size: var(--text-xs);
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  row-gap: var(--space-20);
+}
+
+.days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  margin-bottom: var(--space-20);
+
+  color: var(--gray-400);
+
+  font-size: var(--text-xs);
+  font-weight: 500;
+
+  div {
+    display: flex;
+    justify-content: center;
+    width: 32px;
+  }
+}
+
+.day {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 28px;
+  height: 28px;
+
+  color: var(--gray-500);
+  font-size: var(--text-xs);
+  font-weight: 500;
+
+  border-radius: var(--radius-xl);
+
+  cursor: pointer;
+
+  &:hover {
+    background-color: var(--gray-200);
+  }
+
+  time {
+    cursor: pointer;
+  }
+
+  &.today {
+    background-color: var(--gray-200);
+  }
+
+  &.otherMonth {
+    color: var(--gray-400);
+  }
 }
