--- a/src/core/styles/variables.css
+++ b/src/core/styles/variables.css
@@ -14,6 +14,18 @@
   --gray-800: #182230;
   --gray-900: #101828;
   --gray-950: #0c111d;
+  --brand-primary-25: #f6fefc;
+  --brand-primary-50: #f0fdf9;
+  --brand-primary-100: #ccfbef;
+  --brand-primary-200: #99f6e0;
+  --brand-primary-300: #5fe9d0;
+  --brand-primary-400: #2ed3b7;
+  --brand-primary-500: #15b79e;
+  --brand-primary-600: #0e9384;
+  --brand-primary-700: #107569;
+  --brand-primary-800: #125d56;
+  --brand-primary-900: #134e48;
+  --brand-primary-950: #0a2926;
 
   /* Spacing */
   --space-2: 2px;
