--- a/src/features/Main/components/CalendarWidget/CalendarWidget.module.css
+++ b/src/features/Main/components/CalendarWidget/CalendarWidget.module.css
@@ -5,13 +5,28 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: var(--space-24);
+}
 
-  button {
-    padding: 0;
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 28px;
+  min-width: 28px;
+  padding: 0;
 
-    background: none;
-    border: 0;
+  background: none;
+  border-radius: var(--radius-lg);
+  cursor: pointer;
+
+  svg path {
+    stroke: var(--gray-500);
+  }
+
+  &:first-child svg {
+    transform: rotate(180deg);
   }
 }
 
@@ -33,7 +48,7 @@
 .content {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  row-gap: var(--space-20);
+  row-gap: var(--space-24);
 }
 
 .days {
@@ -49,35 +64,39 @@
   div {
     display: flex;
     justify-content: center;
-    width: 32px;
   }
 }
 
 .day {
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 28px;
-  height: 28px;
 
   color: var(--gray-500);
   font-size: var(--text-xs);
   font-weight: 500;
 
-  border-radius: var(--radius-xl);
-
   cursor: pointer;
 
-  &:hover {
-    background-color: var(--gray-200);
-  }
-
   time {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 28px;
+    height: 28px;
+
+    border-radius: var(--radius-xl);
+
     cursor: pointer;
+
+    &:hover {
+      background-color: var(--gray-200);
+    }
   }
 
-  &.today {
-    background-color: var(--gray-200);
+  &.today time {
+    color: var(--base-white);
+
+    background-color: var(--primary-500);
   }
 
   &.otherMonth {
